--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/chrome": "^0.0.170",
     "@types/node": "^16.11.10",
     "chokidar": "^3.5.2",
     "esbuild": "^0.14.0"
